--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     border-radius: 0;
     outline: 0;
     vertical-align: baseline;
-	font-weight: inherit;
 	font-family: inherit;
 	font-style: inherit;
 	font-size: 100%;
@@ -114,7 +113,7 @@ cursor: pointer;
         top: 60px;
         flex-direction: column;
         width: 100%;
-        height: 785px;
+        height: 100%;
         text-align: center;
         transition: 0.3s;
         z-index: 2;
@@ -129,8 +128,7 @@ cursor: pointer;
     }
 
     .nav-item{
-        margin: 50px;
-        margin-bottom: 50px;
+        margin-bottom: 75px;
      
     }
     .nav-menu.active{
@@ -275,8 +273,8 @@ display: none;
  display: none;
 }
 .slider img {
-    width: 350px;
-    margin-left: 15px;
+    width: 100%;
+    min-width: 380px;
     
   }
 }
