--- a/style.css
+++ b/style.css
@@ -296,7 +296,6 @@ footer > p{
 }
  .companyname{
 margin-right: 20px;
-margin-bottom: 20px;
 }
 .slider img {
     width: 100%;
@@ -707,9 +706,22 @@ margin-bottom: 20px;
 .teamcontainer > .teamcard{
     max-width: 100%;
     min-width: 50px;
-    width: 200px;
-    margin: 2px;
-    min-height: 200px;
+    width: 120px;
+    margin: 5px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: #9DA0A1 solid .5px;
+    transition: .5s ease;
+}
+
+.teamcontainer > .teamcarddesktop{
+    max-width: 100%;
+    min-width: 50px;
+    width: 145px;
+    margin: 5px;
+    height: 200px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -720,6 +732,14 @@ margin-bottom: 20px;
 
 
 .teamcard  > img{
+    width: 100%;
+    height: 110px;
+    border: 2px #9DA0A1;
+    border-style:  none none solid none;
+    object-fit: cover;
+}
+
+.teamcarddesktop  > img{
     width: 100%;
     height: 150px;
     border: 2px #9DA0A1;
@@ -732,11 +752,36 @@ margin-bottom: 20px;
     font-size: 12px;
 }
 
+.teamcarddesktop > p{
+    color: #636363;
+    font-size: 14px;
+}
+
 .teamcard > h4{
     margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 16px;
+    margin-bottom: 1px;
+    font-size: 12px;
 }
+
+.teamcarddesktop > h4{
+    margin-top: 7px;
+    margin-bottom: 1px;
+    font-size: 14px;
+}
+
+
+@media(max-width:450px){
+    .desktopviewteam{
+        display:none;
+    }
+}
+
+@media(min-width:450px){
+    .mobileviewteam{
+        display:none;
+    }
+}
+
 
 .artsizing{
     max-width: 100%;
@@ -965,4 +1010,26 @@ margin-bottom: 20px;
 
 .opacitytry{
 opacity: .5;
+}
+
+.philocontainer > p {
+    word-wrap: break-word;
+    text-align: center;
+    width: 100%;
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+.philocontainer{
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("/pictures/artpic.JPG");
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    height: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    padding: 40px;
 }
