--- a/style.css
+++ b/style.css
@@ -709,6 +709,7 @@ margin-right: 20px;
     color: #636363;
     font-weight: 100 !important;
     align-self: center;
+    margin-top: 0px;
   }
 
   .qoute > .author{
@@ -1084,7 +1085,7 @@ opacity: .5;
 
 .philocontainer{
     background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("/pictures/artpic.JPG");
-    height: 500px; /* You must set a specified height */
+    height: 600px; /* You must set a specified height */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
