--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a{
 }
 
 .navbar{
-   min-height: 80px; 
+   height: 80px; 
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -175,6 +175,8 @@ cursor: pointer;
 
 main{
     max-width: 100%;
+    width: 1200px;
+    margin: 0 auto;
     background-color: #FFFFFF;
     flex: 1 0 auto;
     display: flex;
@@ -187,7 +189,7 @@ main{
 footer{
     width: 100%;
     min-height:100px; 
-    flex: 0 1 180px;
+    flex: 0 1 250px;
     background-color:#9DA0A1;
     display: flex;
     justify-content: center;
@@ -204,14 +206,12 @@ footer > div{
     color: #FFFFFF;
 }
 footer > p{
-    font-size: 1.5rem;
+    font-size: 20px;
     text-align: center;
 }
 
 .maillogo{
-    height: 40px !important;
     padding-top: 5px !important;
-    margin-right: 4px !important;
 }
 
 .socials >img{
@@ -1103,6 +1103,7 @@ opacity: .5;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
+  margin-top: 30px;
 }
 
 
