--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a{
 }
 
 .navbar{
-   height: 80px; 
+   min-height: 80px; 
    display: flex;
    justify-content: space-between;
    align-items: center;
