--- a/style.css
+++ b/style.css
@@ -98,9 +98,7 @@ cursor: pointer;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: #9DA0A1;
-
-} 
-
+}
 
 @media(max-width:768px){
 
@@ -267,18 +265,20 @@ footer > p{
   .text{
       display:flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
       position: absolute;
       bottom: 20px;
       padding: 10px;
       right: 20px;
-      background: rgb(126 118 121 / 85%);
+      background: rgb(126 118 121 / 60%);
       color: white;
       align-items: center;
       margin: auto;
-      width: 175px;
       font-weight: 300;
-      font-size: 15px;
+      font-size: min(max(14px, 4vw), 22px);
   }
+
 
  .carouselbutton{
     background-color:#fff;
@@ -299,6 +299,7 @@ footer > p{
 
   .text > .title {
       width: 100%;
+      margin: 0 5px 0 5px;
       text-align: center;
   }
 
@@ -322,9 +323,18 @@ margin-right: 20px;
 }
 .slider img {
     width: 100%;
-    
   }
+  .goalcontainer{
+    flex-direction: column;
 }
+}
+
+@media (min-width: 780px) {
+
+.philocontainer > p {
+    width: 80%;
+}
+   }
   
   /* Slick Slider Styles -- Provided by https://kenwheeler.github.io/slick/ */
   /* Slider */
@@ -660,7 +670,6 @@ margin-right: 20px;
       flex-direction: column;
       margin:auto;
       word-wrap: break-word;
-      font-size: 1.5rem;
       overflow: hidden;
   }
 
@@ -670,8 +679,32 @@ margin-right: 20px;
 
   .article > h3{
    margin: auto;
+   text-align: center;
+   text-align-last: center;
    font-size: 40px;
+   margin-bottom: 25px;
    font-family: inherit;
+  }
+
+  .subscribeheading{
+    /* margin: auto; */
+    /* text-align: center; */
+    /* text-align-last: center; */
+    font-size: 40px;
+    margin-bottom: 25px;
+    font-family: inherit;
+    color: #fff;
+    background-color: red;
+    width: 51.2%;
+    padding-left: 20px;
+}
+  
+
+  .ourteamwrap > h3{
+    margin: auto;
+    font-size: 40px;
+    margin-bottom: 25px;
+    font-family: inherit;
   }
 
   .article > p{
@@ -697,7 +730,6 @@ margin-right: 20px;
 
   .qoute > p {
     font-size: 25px;
-    font-weight: 600;
     margin-top: 50px;
     color: black;
     text-align: center;
@@ -743,11 +775,12 @@ margin-right: 20px;
 
 .teamcontainer{
     max-width: 100%;
-    width: 1000px;
+    width: 1100px;
     display: flex;
     align-items: center;
     justify-content: center;
     align-self: center;
+    margin-bottom: 50px;
 }
 
 .teamcontainer > .teamcard{
@@ -759,7 +792,6 @@ margin-right: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: #9DA0A1 solid .5px;
     transition: .5s ease;
 }
 
@@ -772,8 +804,32 @@ margin-right: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: #9DA0A1 solid .5px;
     transition: .5s ease;
+}
+
+
+.ourteamwrap{
+    background-image: url(pictures/aboutuspic2.jpg);
+    background-size: cover;
+     width:100%;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    overflow: hidden;
+    color: #fff;
+    margin-bottom: 50px;
+
+}
+
+.contactbackimage{
+    background-image:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.5)), url("/pictures/lets\ try\ contact.JPG");
+    background-size: cover;
+     width:100%;
+    display: flex;
+    flex-direction: column;
+    margin:auto;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 
@@ -781,26 +837,20 @@ margin-right: 20px;
 .teamcard  > img{
     width: 100%;
     height: 110px;
-    border: 2px #9DA0A1;
-    border-style:  none none solid none;
     object-fit: cover;
 }
 
 .teamcarddesktop  > img{
     width: 100%;
     height: 150px;
-    border: 2px #9DA0A1;
-    border-style:  none none solid none;
     object-fit: cover;
 }
 
 .teamcard > p{
-    color: #636363;
     font-size: 12px;
 }
 
 .teamcarddesktop > p{
-    color: #636363;
     font-size: 14px;
 }
 
@@ -821,6 +871,12 @@ margin-right: 20px;
     .desktopviewteam{
         display:none;
     }
+    .aboutsection{
+        flex-direction: column;
+      }
+      .aboutsection > p{
+        margin: 0 0 60px 0;
+      }
 }
 
 @media(min-width:450px){
@@ -859,16 +915,17 @@ margin-right: 20px;
 }
 
 .artcontainer > h4{
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 20px;
 }
 
 .artcontainer > p{
     color: #636363;
-    text-align: center;
+    text-align: justify;
     font-size: 15px;
-    margin: 20px;
+    margin: 15px;
     justify-content: center;
+    width: 80%;
     align-items: center;
 }
 
@@ -877,7 +934,7 @@ margin-right: 20px;
    .artbutton{
     position: absolute;
     margin: 20px;
-    bottom:   20px;
+    bottom:   0px;
     background-color:#fff;
     border: 2px solid #eee2e2;
     color: #636363;
@@ -1066,17 +1123,16 @@ opacity: .5;
 
 .philocontainer > p {
     word-wrap: break-word;
-    text-align: center;
+    text-align: justify;
+    text-align-last: center;
     color: #FFFFFF;
     font-size: 20px;
-    font-weight: 600;
+    font-family: inherit;
     margin: 0px 15px 0 15px;
-
 }
 .philocontainer > h3 {
     word-wrap: break-word;
     text-align:center;
-    font-weight: 600;
     width: 100%;
     color: #FFFFFF;
     font-size: 40px;
@@ -1084,9 +1140,9 @@ opacity: .5;
 
 
 .philocontainer{
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("/pictures/artpic.JPG");
-    height: 600px; /* You must set a specified height */
-    background-position: center; /* Center the image */
+    background-image:linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.5)), url("/pictures/image\ 3.webp");
+    height: 400px; /* You must set a specified height */
+    background-position:top; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
     padding: 5px;
@@ -1094,6 +1150,8 @@ opacity: .5;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 50px;
+    
 }
 
 
@@ -1105,5 +1163,50 @@ opacity: .5;
   background-size: cover; /* Resize the background image to cover the entire container */
   margin-top: 30px;
 }
+
+.goalcontainer{
+    display: flex;
+}
+
+.goalcontainer > img{
+margin-bottom: 50px;
+}
+
+.aboutsection{
+    display: flex;
+    max-width: 100%;
+    width: 1000px;
+    justify-content: space-between;
+    align-items: center;
+    margin:auto;
+}
+
+.aboutsection > p{
+    width: 100%;
+    font-size: 20px;
+    display: flex;
+    text-align-last: center;
+    text-align: justify;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+
+
+.aboutsection > img{
+    width: 100%;
+    object-fit: cover;
+}
+
+#mc_embed_signup .button {
+
+   background-color:red !important; 
+    border: 1px solid black! important ;
+    /* border-radius: 4px; */
+    color: #fff !important;
+}
+
+
+
 
 
