--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ footer > p{
 
 .a > .logo{
     margin:2%;
-    height: 40px;
+    height: 30px;
 }
 
 /*THIS IS THE SLIDER STYLING*/
@@ -706,8 +706,7 @@ margin-right: 20px;
     font-family: inherit;
     color: #fff;
     background-color: red;
-    width: 58.2%;
-    width: 57%;
+    width: 55.5%;
     padding-left: 20px;
 }
   
@@ -765,7 +764,7 @@ margin-right: 20px;
   }
 
   .qoute > p {
-    font-size: 25px;
+    font-size: 30px;
     margin-top: 50px;
     color: black;
     text-align: center;
@@ -1177,9 +1176,9 @@ opacity: .5;
     text-align: justify;
     text-align-last: center;
     color: #FFFFFF;
-    font-size: 20px;
+    font-size: 25px;
     font-family: inherit;
-    margin: 0px 15px 0 15px;
+    margin: 0px 5px 0 5px;
 }
 .philocontainer > h3 {
     word-wrap: break-word;
@@ -1244,9 +1243,14 @@ margin-bottom: 50px;
 
 
 
-.aboutsection > img{
+.teampicdiv> img{
     width: 100%;
     object-fit: cover;
+}
+
+.teampicdiv{
+    text-align: center;
+    font-size: 20px;
 }
 
 #mc_embed_signup .button {
@@ -1255,6 +1259,7 @@ margin-bottom: 50px;
     border: 1px solid black! important ;
     /* border-radius: 4px; */
     color: #fff !important;
+    border-radius: 4px !important;
 }
 
 .footerlogo{
@@ -1278,6 +1283,7 @@ left: 0;
 background: rgba(255, 254, 255, 0.4);
 border: none;
 border: none;
+color: #000;
     font-size: 30px;
     padding: 0 10px 5px 10px;
     margin-bottom: 250px;
@@ -1289,6 +1295,7 @@ border: none;
     z-index: 5;
     right: 0;
     background: rgba(255, 255, 255, 0.4);
+    color: #000;
     border: none;
     border: none;
     font-size: 30px;
