--- a/style.css
+++ b/style.css
@@ -205,9 +205,6 @@ footer > p{
     text-align: center;
 }
 
-.maillogo{
-    padding-top: 5px !important;
-}
 
 .a > .logo{
     margin:2%;
@@ -319,9 +316,6 @@ footer > p{
  .companyname{
 margin-right: 20px;
 }
-.slider img {
-    width: 100%;
-  }
   .goalcontainer{
     flex-direction: column;
 }
@@ -331,6 +325,9 @@ margin-right: 20px;
 
 .philocontainer > p {
     width: 80%;
+}
+.socials{
+    width:30%;
 }
 .artcontainer > img{
     margin-right: 40px;
@@ -1200,7 +1197,6 @@ opacity: .5;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 25px;
     
 }
 
@@ -1246,6 +1242,8 @@ margin-bottom: 50px;
 .teampicdiv> img{
     width: 100%;
     object-fit: cover;
+    max-width: 1000px;
+    margin-bottom: 10px;
 }
 
 .teampicdiv{
@@ -1301,4 +1299,16 @@ color: #000;
     font-size: 30px;
     padding: 0 10px 5px 10px;
     margin-bottom: 250px;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+    max-width: 300px;
+}
+
+a > .logo{
+    height: 40px;
 }
