--- a/style.css
+++ b/style.css
@@ -1191,7 +1191,7 @@ opacity: .5;
     color: #FFFFFF;
     font-size: 25px;
     font-family: inherit;
-    margin: 0px 5px 0 5px;
+    margin: 0px 5px 5px 5px;
 }
 .philocontainer > h3 {
     word-wrap: break-word;
